2005-04-xx:  0.1.8       -- support for ace (cba), tar.gz and tar.bz2 archives
                         -- reversed mouse-dragging
			 -- 'Open next' option added

2005-04-05:  0.1.7       -- thread-based thumbnail loading
                         -- thumbnails are smooth-scaled now
			 -- added option to set font for comic book info
			    dialog
                         -- added progress bar for archives decompression
			 -- added statusbar
			 -- fixed bug with thumbnails view taking keyboard
			    focus

2005-03-30:  0.1.6       -- thumbnails view
                         -- page contents scrolling with mouse (LMB + move)
			 -- PageUp/PageDown keys reversed
			 -- scrolling up/down with mouse wheel now requires
			    an extra wheel move to flip page
			 -- scaling page buttons are toggle-buttons now to
			    indicate active scaling
			 -- toolbar position is saved now
                         -- cleanups in directory and archive handling code
			 -- fixed possible crash on errors when opening
			    comic book

2005-03-07:  0.1.5       -- image caching
                         -- page preloading
			 -- built-in help browser
			 -- new scaling option - best fit
			 -- man page added (from debian project subdirectory)
			 -- page scaling setting is saved/restored
			 -- fixed bug with recently opened files - most
			    recently opened file is on the top
			 -- fixed crash on empty archive/directory
			 -- internal improvements and small bugfixes

2005-02-03:  0.1.4       -- fixed bug with command line arguments parsing
                         -- fixed drawing bugs
                         -- real fullscreen mode - menu may be hidden if desired
			    (see config dialog)
			 -- ESC key quits fullscreen mode
                         -- space / backspace keys jump by visible
			    contents height now, instead of whole page;
			    improved continuous scrolling
                         -- jump to page... window is now modal
			 -- basic errors handling