@@ -1,6 +1,9 @@
 2005-04-xx:  0.1.8       -- support for ace (cba), tar.gz and tar.bz2 archives
-                         -- reversed mouse-dragging
+                         -- improved mouse-dragging
+			 -- reversed mouse-dragging directions
 			 -- 'Open next' option added
+			 -- most menu/toolbar functions are inactive now if no comic book is
+			    opened
 
 2005-04-05:  0.1.7       -- thread-based thumbnail loading
                          -- thumbnails are smooth-scaled now
